# dnd-chicago

./: .gitignore  Dockerfile  chicago.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/plan_demography/: ca10-1042.csv  ca10-25218.csv  ca10-5304.csv  ca10-5848.csv  ca10-87557.csv  ca10-937.csv  current_wards.csv  prec10-12816.csv  prec10-205.csv  prec10-41323.csv  prec10-4287.csv  prec10-55139.csv  prec10-55213.csv  prec10-8178.csv  prec10-86660.csv  prec10-8698.csv  prec50-12816.csv  prec50-4287.csv  prec50-55139.csv  prec50-6084.csv
data/plan_results/: plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_0.0_2_0.6_0.5.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_0.0_2_0.6_1.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_0.0_2_0.6_2.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_0.0_2_0.9_0.5.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_0.0_2_0.9_1.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_0.0_2_0.9_2.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_1.0_2_0.6_0.5.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_1.0_2_0.6_1.jsonl  plurality_slate_pl_voters_1000_seats_1_samples_100_current_wards_1.0_2_0.6_2.jsonl  (+3173 more)
notebooks/: Aggregate_Results.ipynb  Generate_Configurations.ipynb  Sanity_Run_Plan.ipynb  Summarize_Demographics_By_Plan.ipynb  bar_plots.ipynb
scripts/: aggregate_results.py  parallel.py  votekit_cli_many.py
(+3727 files in other folders)
