[project]
name = "Training_Materials" 
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "geopandas>=1.1.0",
    "gerrychain>=0.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.1",
    "joblib-progress>=1.0.6",
    "jsonlines>=4.0.0",
    "openpyxl>=3.1.5",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "votekit>=3.2.0",
]
